skeleton creation code

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -14,7 +14,7 @@ directories:
   - lib/views
   - lib/@
   - spec
-xfiles:
+files:
   - template: Gemfile.erb
     destination: . 
   - template: Rakefile.erb
