--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,6 +1,6 @@
 assets:
   - name: bootstrap
-    url: http://twitter.github.com/bootstrap/assets/bootstrap.zip
+    url: http://getbootstrap.com/2.3.2/assets/bootstrap.zip
   - name: jqueryui
     url: https://github.com/jquery/jquery-ui/archive/master.zip
   - name: glyphicons
